--- a/docs/stat566/qe_applied_stat_inclass.Rmd
+++ b/docs/stat566/qe_applied_stat_inclass.Rmd
@@ -39,54 +39,411 @@ Fountain*, Crain
 
 ## 2015F 
 
+### 2015F1
+[2016S1][]
+
+You must design an experiment to test six factors, each having two levels. Your budget will only allow sixteen runs. Furthermore, due to time constraints, only eight runs can be done on a given day, so you will have to conduct the experiment in 2 blocks. You may assume that 4-way and higher interactions are not important.
+
+Show all of the following:
+ - all of your generators (make sure that your resolution is at least III)
+ - he 16 runs to conduct
+ - the alias structure
+ - the eight runs to be done on each day
+ - the effects to be confounded with blocks
+ - the Source and DF columns of the ANOVA table
+
+### 2015F2
+
+A company is comparing two different methods of processing their raw material. They begin with 8 batches of material, which are randomly assigned to one of the two processes. The quality of the final product is measured on a 50-point scale. There is some concern that the outside temperature on each day might have an effect on the product (and the effect might be different for the two processes), and so it is recorded so that it can be taken into account. The following table shows and ordered pair for each batch, consisting of the quality measurement and the temperature.
+
+ --------- -------------- --------------
+ Process 1 (45,81)(40,68) (41,77)(41,61)
+          
+ Process 2 (42,59)(37,62) (41,83)(35,70)
+ ---------------------------------------
+
+a) Write an appropriate model for the situation described above. Hint: there are 8 observations, and you will need to use at least one indicator variable.
+
+b) Write the matrix form of the appropriate model. Show the contents and dimensions of all matrices.
+
+c) Suppose that you wish to test for equality of the two slopes. Write the matrix form of the reduced model. What will be the numerator and denominator degrees of freedom for the additional sum of squares F test?
+
+### 2015F3
+
+a) Explain the difference between fixed and random effects in an experimental design. Give an example to illustrate your explanation.
+
+b) Explain the difference between crossed and nested effects in an experimental design. Give an example to illustrate your explanation. Make sure to discuss which terms would be absent from the model, and the resulting effect on sums of squares and degrees of freedom in the ANOVA table.
+
+### 2015F4
+[2019S1][]
+
+Assume the model $y_i=\beta_0+\beta_1x_i+\beta_2x_i^2+\varepsilon_i$, $i=1,..,n$ with the additional restrictions that $\beta_1=0$, $\beta_0=2\beta_2$. Find the least-squares estimators of $\beta_0$ and $\beta_1$.
+
 ## 2016S
 Fountain, Tableman*
 
+### 2016S1
+
+You must design an experiment to test six factors, each having two levels. Your budget will only allow sixteen runs. Furthermore, due to time constraints, only eight runs can be done on a given day, so you will have to conduct the experiment in 2 blocks. You may assume that 4-way and higher interactions are not important.
+
+Show all of the following:
+ - all of your generators (make sure that your resolution is at least III)
+ - he 16 runs to conduct
+ - the alias structure
+ - the eight runs to be done on each day
+ - the effects to be confounded with blocks
+ - the Source and DF columns of the ANOVA table
+
+### 2016S2
+[2017F3][] [2018S3][]
+
+The multiple linear regression model $y_i=\beta_0+\beta_1x_{i1}+\beta_2X_{i2}+\beta_3X_{i3}+\beta_4X_{i4}+\beta_5X_{i5}+\varepsilon_i$
+was fit to a data set of 75 observations. The regression SS’s (SSR) were partitioned sequentially into
+the following:
+
+$SSR(X_1)=108$
+
+$SSR(X_2 | X_1)=163$
+
+$SSR(X_3 | X_1 X_2)=29$
+
+$SSR(X_4 | X_1 X_2 X_3)=41$
+
+$SSR(X_5 | X_1 X_2 X_3 X_4)=26$
+
+The model $y_i=\beta_0+\beta_1x_{i1}+\beta_3X_{i3}+\beta_5X_{i5}+\varepsilon_i$ was also fit to the same data and the following ANOVA was calculated:
+
+ ------------------
+ Source          SS
+ -------------- ---
+ Regression     214
+
+ Residual Error 489
+
+ Total          703
+ ------------------
+
+Answer the following from the above information:
+
+(a) Calculate the F-statistic for testing the hypothesis $(H_0)$ that $X_3$, $X_4$, and $X_5$ have no significant effect on the response $Y$.
+
+(b) Calculate $R^2$ for the model $y_i=\beta_0+\beta_1x_{i1}+\beta_3X_{i2}\varepsilon_i$
+
+(c) Calculate the $R^2_{adj}$ for the model in part (b).
+
+(d) Calculate the F-statistic for testing $H_0:\beta_2=\beta_4=0$.
+
+### 2016S3
+
+a) Explain the difference between fixed and random effects in an experimental design. Give an example to illustrate your explanation.
+
+b) Explain the difference between crossed and nested effects in an experimental design. Give an example to illustrate your explanation. Make sure to discuss which terms would be absent from the model, and the resulting effect on sums of squares and degrees of freedom in the ANOVA table.
+
+### 2016S4
+[2019S1][]
+
+Assume the model $y_i=\beta_0+\beta_1x_i+\beta_2x_i^2+\varepsilon_i$, $i=1,..,n$ with the additional restrictions that $\beta_1=1$, $\beta_2=\beta_0$. Find the least-squares estimators of the coefficients.
+
+### 2016S5
+
+In the multiple regression model with $p-1$ independent variables $X_j$, let the $n\times p$ matrix X denote
+the design matrix which contains the column of 1’s to fit the intercept term and has full rank. Let H
+denote the hat matrix. Let $h_{ii}$ denote the $i_{th}$ diagonal element of H. Prove that $0\le h_{ii}\le1$.
 
 ## 2016F
 Jong Sung Kim*, Brad Crain
 
+### 2016F1
 
+The data for this question consist of 12 measurements on each of 2 quantitative regressor variables $x_1$ and $x_2$ and on a dependent variable y. The data are displayed below:
+
+ -------------
+ Obs x1 x2 y
+ --- -- -- ---
+ 1   3   1 5
+ 
+ 2   3   2 5
+ 
+ 3   3   2 3
+ 
+ 4   7   1 23
+ 
+ 5   7   3 19
+ 
+ 6   12  1 75
+ 
+ 7   12  1 81
+ 
+ 8   12  2 67
+ 
+ 9   12  3 51
+ 
+ 10  12  3 47
+ 
+ 11  19  2 135
+ 
+ 12  19  3 121
+ -------------
+ 
+The model to be fit to the data is $Y =\beta_0+\beta_1x_{1}+\beta_2X_{2}+\varepsilon_i$. What follows is partially incomplete SAS output. Although the output is incomplete, there is enough information given that you can answer the questions that follow with a minimal amount of calculation. Note that Type I SS is the same as Seq SS.
+
+Information I: model: $y = x_1 x_2$;
+
+Information II: model:$y = x_2 x_1$;
+
+(a) Do a hypothesis test, at the .01 level of significance, of $H_0:\beta_1=\beta_2=0$ vs. $H1$: At least one of $\beta_1$ or $\beta_2\neq0$.
+
+(b) What is the value of $R^2$?
+
+(c) Do the following two hypothesis tests, each at the .05 level of significance:
+
+  i. $H_0:\beta_1=0$ vs. $H_1: \beta_1\neq0$
+  
+  ii. $H_0:\beta_2=0$ vs. $H_1: \beta_2\neq0$
+
+(d) Obtain a 99% confidence interval for $\beta_1$.
+
+(e) Give an unbiased estimate of the variance of $\hat\beta_1-\hat\beta_2$.
+
+(f) Obtain MS(Pure Error). Hint: Pure Error can be found exactly the same way as we did for simple linear regression model. That is, group according to different combinations of levels from X1 and X2. First compute SS(Pure Error), and then divide it by degrees of freedom.
+
+(g) Perform a test for lack-of-fit at the .05 level of significance. Note: If you are unable to answer part (f), use MS(Pure Error) = 7.5. This is not the correct answer to (f), but if you use it in this part of the problem, you will receive full credit on this part, provided your answer is otherwise correct.
+
+### 2016F2
+
+Data were collected on each of two quantitative regressor variables $X_1$ and $X_2$, a dichotomous categorical variable which we shall call “group”, and a dependent variable Y. The data are displayed below:
+
+ --------------------
+ Obs y  x1   x2 group
+ --- -- ---- -- -----
+ 1   14 3.54 17 1
+ 
+ 2   23 4.87 15 1
+ 
+ 3   31 2.89 13 1
+ 
+ 4   28 3.03 10 1
+ 
+ 5   25 4.10 21 2
+ 
+ 6   35 3.55 18 2
+ 
+ 7   18 5.17 18 2
+ 
+ 8   23 3.99 16 2
+ 
+ 9   40 2.02 13 2
+ 
+ 10  34 2.44 13 2
+ --------------------
+ 
+The model to be fit to the data is $Y_i=\beta_0+\beta_1x_{1i}+\beta_2X_{2i}+\beta_3X_{2i}^2+\beta_4Z_{i}+\beta_5X_{1i}Z_{i}+\beta_6X_{2i}Z_{i}+\beta_7X_{2i}^2Z_{i}+\varepsilon_i$, where $Z_i=1$, if case i is in group 1, and $Z_i=0$, otherwise.
+
+(a) What are the first and last rows of the X-matrix (assuming that the data are entered in the same order in which they are displayed above)?
+
+First row:
+
+Last row:
+
+(b) For each of the following objectives, give the appropriate null hypothesis.
+
+  i. It is desired to know whether the slope coefficient on $x_1$ is the same for both groups.
+  
+  ii. It is desired to know whether the entire regression models for the two groups are identical.
+
+  iii. It is desired to know whether a quadratic term in $x_2$ is needed by both groups.
+
+  iv. It is desired to know whether the slope coefficients on $x_1$ and $x_2$ for the first group are equal.
+
+### 2016F3
+
+The following is part of the SAS output from a simple linear regression model: $y_i=\beta_0+\beta x_i+\varepsilon_i$, where $i=1,..,13$, and $y_i$ and $x_i$ are the ith punter’s average punting distance and right leg strength, respectively. Each punter punted 10 times and the average distance was measured. In addition, measure of right leg strength (lb lifted) was taken via a weight lifting test.
+
+(a) Find the three residual values at x = 170.
+
+(b) Compute a 95% confidence interval for the mean response at x = 170. Hint:Compute the variance of the estimate of the mean response at x = 170.
+
+(c) Compute a 95% prediction interval on a new response observation at x = 170. Hint: You can use part of the expression in (b).
+
+### 2016F4
+
+Prior to 1985, Meily Lin had observed that some colors of birthday balloons seem to be harder to inflate than others. She ran this experiment to determine whether balloons of different colors are similar in terms of the time taken for inflation to a diameter of 7 inches. Four colors were selected from a single manufacturer. An assistant blew up the balloons and the experimenter recorded the times (to the nearest 1/10 second) with a stop watch. This experiment was replicated 4 times, and the data including the order are displayed in the SAS code below, where color 1 = pink, 2 = yellow, 3 = orange, and 4 = blue.
+
+data balloon;
+input runorder color inftime @@;
+
+cards;
+
+1 1 22.4 2 3 24.6 3 1 20.3 4 4 19.8 5 3 24.3 6 2 22.2 7 2 28.5 8 2 25.7
+9 3 20.2 10 1 19.6 11 2 28.8 12 4 24.0 13 4 17.1 14 4 19.3 15 3 24.2 16
+1 15.8 17 2 18.3 18 1 17.5 19 4 18.7 20 3 22.9 21 1 16.3 22 4 14.0 23 4
+16.6 24 2 18.1 25 2 18.9 26 4 16.0 27 2 20.1 28 3 22.5 29 3 16.0 30 1
+19.3 31 1 15.9 32 3 20.3
+
+a. Why or why not do we need to record the run order in the model?
+
+b. What kind of model would be appropriate for the above experiment?
+
+c. Read the following <Program I>. If we had assumed that there is an equal slope linear relationship between the inflation time and the run order for each color, how can we test the assumption? How would you adjust the following program?
+Why?
+
+<Program I>
+proc glm data=balloon;
+
+class color; /* color: 1 = pink, 2 = yellow, 3 = orange, 4 = blue */
+
+model inftime = color runorder;
+
+estimate 'pink vs. orange' color -1 0 1 0;
+
+lsmeans color/pdiff;
+
+run;
+
+d. Based on the following output from <Program I>, one can apply a Bonferroni multiple comparison test with level .05. Which are significantly different and which are not?
+
+### 2016F5
+
+Consider an experiment to compare 7 treatments in block of size 5. Taking all possible combinations of five treatments from seven gives a balanced incomplete block design with each treatment level occurring 15 times. Hint: Figure out $p, t, k, r, \lambda$ and their relationships.
+
+a. How many blocks does the design have?
+
+b. Show that the number of times each treatment level occurs must be a multiple of five for a balanced incomplete block design with 7 treatments and blocks of size 5 to exist.
+
+c. Show that the smallest balanced incomplete block design has 15 observations per treatment.
 
 ## 2017S
 Brad Crain, Jong Sung Kim*
 
+### 2017SR1
+A company is comparing two different methods of processing their raw material. They begin with 8 batches of material, which are randomly assigned to one of the two processes. The quality of the finalproduct is measured on a 50-point scale. There is some concern that the outside temperature on each day might have an effect on the product (and the effect might be different for the two processes), and so it is recorded so that it can be taken into account. The following table shows and orderedpair for each batch, consisting of the quality measurement and the temperature.
+
+a) Write an appropriate model for the situation described above. Hint: there are 8 observations, and you will need to use at least one indicator variable.
+
+b) Write the matrix form of the appropriate model. Show the contents and dimensions of all matrices.
+
+c) Suppose that you wish to test for equality of the two slopes. Write the matrix form of the reduced model. What will be the numerator and denominator degrees of freedom for the additional sum of squares F test?
+
+### 2017SR2
+
+Assume the model $y_i=\beta_0+\beta_1x_i+\beta_2x_i^2+\varepsilon_i$, $i=1,..,n$
+with the additional restrictions that $\beta_1=1$ and $\beta_2=\beta_0/2$. Find the least-squares estimators of $\beta_0$, $\beta_1$, $\beta_2$.
+
+### 2017SD1
+
+Given a educational material evaluation experiment where there are three possible blocking factors [R,C,G], each with six levels [R1::6;C1::6;G1::6]:
+
+1. Write out the model equation of the Latin Square design if the blocking factors R and C are used, and G is disregarded.
+
+2. Explain why all three blocking factors can not be used simultaneously without a modification
+
+3. What is the modification required?
+
+4. If the Relative Efficiency for the modified experiment was calculated to be 2.3, how many
+observations of heterogeneous experimental units in a CRD would be expected to obtain the
+same variance for the treatment mean as one replicate of the modified experiment.
+
+### 2017SD2
+
+Given a Blocked $2^{6-2}$ design with Factors [A,B,C,D,E,F],Generators E=ABC, F=BCD and Defining Contrasts AB, CD
+
+1. How many blocks are included in this design?
+
+2. What is the Defining Relationship in this design?
+
+3. What is the Resolution of this Design?
+
+4. List the aliases of AE
+
+5. Show the effect on two-way interactions that include A, if you augment by folding on A
+
+6. List the aliases of the defining contrasts [including the generalized interaction]?
 
 ## 2017F
 Robert Fountain*, Daniel Taylor-Rodriguez
+
+### 2017F1
+
+A company has developed two specialized training workshops for their employees. Each of the 12 employees is randomly assigned to one of the two workshops. The company would like to develop a model that could be used to predict each employee’s performance score (a number from 0 to 100) based on their attendance at the workshops. The previous year’s performance score is also available for use as a predictor. The following table shows and ordered pair for each employee, consisting of the current performance score and the previous year’s score.
+
+a) Write an appropriate model for the situation described above, allowing for different slopes and different intercepts for the two workshops. Hint: there are 12 observations, and you will need to use at least one indicator variable.
+
+b) Write the matrix form of the appropriate model. Show the contents and dimensions of all matrices.
+
+c) Suppose that you wish to test for equality of the two slopes. Write the matrix form of the reduced model. What will be the numerator and denominator degrees of freedom for the additional sum of squares F test?
+
+### 2017F2
+
+a) Explain the difference between fixed and random effects in an experimental design. Give an example to illustrate your explanation.
+
+b) Explain the difference between crossed and nested effects in an experimental design. Give an example to illustrate your explanation. Make sure to discuss which terms would be absent from the model, and the resulting effect on sums of squares and degrees of freedom in the ANOVA table.
+
+### 2017F3
+[2018S3][]
+
+The multiple linear regression model $y_i=\beta_0+\beta_1x_{i1}+\beta_2X_{i2}+\beta_3X_{i3}+\beta_4X_{i4}+\beta_5X_{i5}+\varepsilon_i$
+was fit to a data set of 75 observations. The regression SS’s (SSR) were partitioned sequentially into
+the following:
+
+$SSR(X_1)=108$
+
+$SSR(X_2 | X_1)=163$
+
+$SSR(X_3 | X_1 X_2)=29$
+
+$SSR(X_4 | X_1 X_2 X_3)=41$
+
+$SSR(X_5 | X_1 X_2 X_3 X_4)=26$
+
+The model $y_i=\beta_0+\beta_1x_{i1}+\beta_3X_{i3}+\beta_5X_{i5}+\varepsilon_i$ was also fit to the same data and the following ANOVA was calculated:
+
+ ------------------
+ Source          SS
+ -------------- ---
+ Regression     214
+
+ Residual Error 489
+
+ Total          703
+ ------------------
+
+Answer the following from the above information:
+
+(a) Calculate the F-statistic for testing the hypothesis $(H_0)$ that $X_3$, $X_4$, and $X_5$ have no significant effect on the response $Y$.
+
+(b) Calculate $R^2$ for the model $y_i=\beta_0+\beta_1x_{i1}+\beta_3X_{i2}\varepsilon_i$
+
+(c) Calculate the $R^2_{adj}$ for the model in part (b).
+
+(d) Calculate the F-statistic for testing $H_0:\beta_2=\beta_4=0$.
+
+### 2017F4
+[2019S1][]
+
+Assume the model $y_i=\beta_0+\beta_1x_i+\beta_2x_i^2+\varepsilon_i$, $i=1,..,n$ with the additional restrictions that $\beta_0=1$, $\beta_1-\beta_2=0$. Find the least-squares estimators of the regression coefficients.
 
 ## 2018S
 Robert Fountain*, Daniel Taylor-Rodriguez
 
 ### 2018S1
-A company has developed three specialized training workshops for their employees. Each of the 12
-employees is randomly assigned to one of the three workshops. The company would like to develop
-a model that could be used to predict each employee’s performance score (a number from 0 to 100)
-based on their attendance at the workshops. The previous year’s performance score is also available
-for use as a predictor. The following table shows and ordered pair for each employee, consisting of
-the current performance score and the previous year’s score.
+A company has developed three specialized training workshops for their employees. Each of the 12 employees is randomly assigned to one of the three workshops. The company would like to develop a model that could be used to predict each employee’s performance score (a number from 0 to 100) based on their attendance at the workshops. The previous year’s performance score is also available for use as a predictor. The following table shows and ordered pair for each employee, consisting of the current performance score and the previous year’s score.
 
-a) Write an appropriate model for the situation described above, allowing for different slopes and different
-intercepts for the three workshops. Hint: there are 12 observations, and you will need to use
-at least one indicator variable.
+a) Write an appropriate model for the situation described above, allowing for different slopes and different intercepts for the three workshops. Hint: there are 12 observations, and you will need to use at least one indicator variable.
+
 b) Write the matrix form of the appropriate model. Show the contents and dimensions of all matrices.
-c) Suppose that you wish to test for equality of the three slopes. Write the matrix form of the reduced
-model. What will be the numerator and denominator degrees of freedom for the additional sum of
-squares F test?
+
+c) Suppose that you wish to test for equality of the three slopes. Write the matrix form of the reduced model. What will be the numerator and denominator degrees of freedom for the additional sum of squares F test?
 
 
 ### 2018S2
 
-A company that produces textiles is trying to determine if the final quality is determined by production
-site (A), machine operator (B), and thread type (C). The company operates 3 production sites,
-and all 3 will participate in the experiment. At each of the 3 sites, 5 machine operators will be randomly
-selected. The company uses two different types of thread. Each of the operators will produce
-3 samples of cloth using each type of thread, yielding a total of $3\times5\times2\times3=90$ observations.
+A company that produces textiles is trying to determine if the final quality is determined by production site (A), machine operator (B), and thread type (C). The company operates 3 production sites, and all 3 will participate in the experiment. At each of the 3 sites, 5 machine operators will be randomly selected. The company uses two different types of thread. Each of the operators will produce 3 samples of cloth using each type of thread, yielding a total of $3\times5\times2\times3=90$ observations.
+
 a) State which effects are fixed at which effects are random.
+
 b) State which effects are nested within others and which effects are crossed.
-c) Create an abbreviated ANOVA table that has two columns: one column that lists the effects in the
-model (including the appropriate main effects, interactions, and nested effects), and a second column
-that gives the degrees of freedom for each item in the first column.
+
+c) Create an abbreviated ANOVA table that has two columns: one column that lists the effects in the model (including the appropriate main effects, interactions, and nested effects), and a second column that gives the degrees of freedom for each item in the first column.
 
 ### 2018S3
 
@@ -106,12 +463,15 @@ $SSR(X_5 | X_1 X_2 X_3 X_4)=26$
 
 The model $y_i=\beta_0+\beta_1x_{i1}+\beta_3X_{i3}+\beta_5X_{i5}+\varepsilon_i$ was also fit to the same data and the following ANOVA was calculated:
 
-Source SS
-Regression 214
+ ------------------
+ Source          SS
+ -------------- ---
+ Regression     214
 
-Residual Error 489
+ Residual Error 489
 
-Total 703
+ Total          703
+ ------------------
 
 Answer the following from the above information:
 
